--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,23 @@
         android:theme="@style/Theme.MarketApp"
         tools:targetApi="31">
         <activity
-            android:name=".MenuActivity"
-            android:exported="true" >
+            android:name="presentation.HostActivity"
+            android:exported="false" />
+        <activity
+            android:name=".examples.MenuActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".DestinationActivity"
+            android:name=".examples.DestinationActivity"
             android:exported="false" />
-
         <activity
-            android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+            android:name=".examples.MainActivity"
+            android:exported="false"></activity>
     </application>
 
 </manifest>
